--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.freezed_practice">
+    package="com.gione.nicetodo">
    <application
-        android:label="freezed_practice"
+        android:label="NiceToDo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
