--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "freezed_practice" "\0"
+            VALUE "FileDescription", "nicetodo" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "freezed_practice" "\0"
+            VALUE "InternalName", "nicetodo" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "freezed_practice.exe" "\0"
-            VALUE "ProductName", "freezed_practice" "\0"
+            VALUE "OriginalFilename", "nicetodo.exe" "\0"
+            VALUE "ProductName", "nicetodo" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
