--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   freezed_annotation: ^1.1.0
   flutter_riverpod: ^1.0.3
+  auto_route: ^3.2.4
+  cloud_firestore: ^3.1.17
+  shared_preferences: ^2.0.15
+  firebase_auth: ^3.3.19
+  firebase_dynamic_links: ^4.2.5
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +54,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   freezed: ^1.1.1
   build_runner: ^2.1.10
+  auto_route_generator: ^3.2.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,9 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
