--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   shared_preferences: ^2.0.15
   firebase_auth: ^3.3.19
   firebase_dynamic_links: ^4.2.5
+  google_sign_in: ^5.3.3
+  extended_image: ^6.1.0
 
 dev_dependencies:
   flutter_test:
